--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: python
 python:
  - 2.7
+env:
+ - PROTOBUF_VERSION=2.5.0
+ - PROTOBUF_VERSION=2.6.0
 install:
- - pip install protobuf==2.5.0
+ - pip install protobuf==$PROTOBUF_VERSION
  - python setup.py install
 script: python -mdoctest protobuf_extra/__init__.py
